--- a/Seleniumintro/.classpath
+++ b/Seleniumintro/.classpath
@@ -26,5 +26,18 @@
 	<classpathentry kind="lib" path="E:/QA/jars/selenium-2.53.1/libs/netty-3.5.7.Final.jar"/>
 	<classpathentry kind="lib" path="E:/QA/jars/selenium-2.53.1/libs/phantomjsdriver-1.2.1.jar"/>
 	<classpathentry kind="lib" path="E:/QA/jars/selenium-2.53.1/libs/testng-6.9.9.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/log4j.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/poi-3.15-beta2.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/poi-examples-3.15-beta2.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/poi-excelant-3.15-beta2.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/poi-ooxml-3.15-beta2.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/poi-ooxml-schemas-3.15-beta2.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/poi-scratchpad-3.15-beta2.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/ooxml-lib/curvesapi-1.04.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/ooxml-lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/lib/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
