--- a/Seleniumintro/.classpath
+++ b/Seleniumintro/.classpath
@@ -39,5 +39,15 @@
 	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/lib/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/lib/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="E:/QA/jars/poi-3.15-beta2/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/cobertura-2.1.1.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/cucumber-core-1.2.4.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/cucumber-java-1.2.4.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/cucumber-junit-1.2.4.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/cucumber-jvm-deps-1.0.5.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/cucumber-reporting-2.7.0.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/gherkin-4.0.0.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/mockito-all-2.0.2-beta.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
