--- a/Seleniumintro/.classpath
+++ b/Seleniumintro/.classpath
@@ -49,5 +49,23 @@
 	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/gherkin-4.0.0.jar"/>
 	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="E:/QA/jars/Cucumber jars/mockito-all-2.0.2-beta.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/ojdbc7.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/postgresql-9.4.1210.jre6.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/cdi-api-1.1-PFD.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/classmate-1.3.0.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/el-api-2.2.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/geronimo-jta_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/hibernate-commons-annotations-5.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/hibernate-core-5.2.0.Final.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/jandex-2.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/jsr250-api-1.0.jar"/>
+	<classpathentry kind="lib" path="F:/Java/jars/hibernate-5.2.0/xml-apis-1.0.b2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
